[gd_scene load_steps=9 format=3 uid="uid://rhumonngla1h"]

[ext_resource type="Script" path="res://Units/Towers/tower.gd" id="1_uhmu3"]
[ext_resource type="Texture2D" uid="uid://rv4qo4m3l6xm" path="res://Units/Towers/Attackers/Zapper/Zapper.png" id="3_bct1r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_33w76"]
atlas = ExtResource("3_bct1r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3mxr"]
atlas = ExtResource("3_bct1r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gyd6"]
atlas = ExtResource("3_bct1r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r2q5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33w76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3mxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gyd6")
}],
"loop": true,
"name": &"default",
"speed": 1.5
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_awg3t"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccqx2"]
size = Vector2(32, 32)

[node name="Tower" type="RigidBody2D" node_paths=PackedStringArray("attack_timer") groups=["Tower"]]
collision_mask = 2
script = ExtResource("1_uhmu3")
money_cost = 1
attack_timer = NodePath("AttackTimer")
max_health = 50.0
attack_damage = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r2q5k")
frame_progress = 0.793381

[node name="Range" type="Area2D" parent="."]
collision_mask = 2
input_pickable = false

[node name="RangeShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_awg3t")
debug_color = Color(0.971747, 0, 0.162705, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ccqx2")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
